# gst-template-vala

./: CMakeLists.txt  LICENSE  README.md
cmake/: UseVala.cmake
src/: CMakeLists.txt  plugdef.in  plugin.vala
